removed security manager system property